--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.main.allow-bean-definition-overriding=true
 
 # APPLICATION LOG CONFIG
 #-------------------------------------------------------------------------------------------------------------------
-logging.config=./src/main/resources/log4j2.xml
+#logging.config=./src/main/resources/log4j2.xml
 #logging.file=/var/log/OAUTH2-APPLICATION-CLIENT-DEMO/OAUTH2-APPLICATION-CLIENT-DEMO.log
+logging.file=/home/jereelton/logs/OAUTH2-APPLICATION-CLIENT-DEMO/OAUTH2-APPLICATION-CLIENT-DEMO.log
 
 # OAUTH2 APPLICATION CLIENT SETTINGS
 #-------------------------------------------------------------------------------------------------------------------
@@ -35,19 +36,19 @@ cors.allowed.origins=http://localhost:8080
 #-------------------------------------------------------------------------------------------------------------------
 eureka.client.serviceUrl.defaultZone=http://localhost:33001/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.int}
-eureka.instance.preferIpAddress=true
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.healthcheck.enabled=true
+eureka.instance.preferIpAddress=false
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+eureka.client.healthcheck.enabled=false
 
 # DATABASE SETTINGS
 #-------------------------------------------------------------------------------------------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3708/demo?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.datasource.username=devel
-spring.datasource.password=123mudar
+spring.datasource.username=root
+spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
